one gallery, wherever a template is chosen
The tag grouping was drawn twice: a TreeView in the resource manager and
tag submenus in the pickers. Neither showed a template at the size you
judge it by, neither could be searched, and they had already drifted.

TemplateGallery is now both: a tag rail (All, the activity tags, the
custom ones, Untagged — each with a count) beside a searchable grid of
thumbnails carrying their tag chips. The resource manager embeds it; a
template slot opens it as a dialog, with Capture new and the resource
manager as actions inside the gallery rather than a menu in front of it.
That is what lets the slot be a button: a menu that must also offer those
two has to stay a menu, and a menu cannot show a hundred pictures.

The dialog hands its result back through a callback rather than returning
one, because capture is asynchronous — the gallery closes, the overlay
takes the screen, and the saved template arrives long after showAndWait
would have returned.

Rail rows and search are TemplateGalleryModel, outside the widget: they
are the decisions (what a group is, what an empty declared tag looks
like, what a query matches) and they test without a display.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>